# streamlit-video-custom

./: .gitignore  MANIFEST.in  README.md  convert_coco.py  example.py  main.py  pyproject.toml
testcomponent/: .gitignore  __init__.py  pyproject.toml
testcomponent/frontend/: package-lock.json  package.json  vite.config.ts
testcomponent/frontend/src/: MyComponent.tsx  index.tsx  styles.css
