[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testcomponent"
version = "0.0.1"
description = "Testing component for custom streamlit components"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Adam Rankine", email = "adam.rankine@defence.gov.au" }]
dependencies = ["streamlit >= 1.51"]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["testcomponent*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
testcomponent = ["frontend/build/**/*", "pyproject.toml"]
